--- a/backend/package.json
+++ b/backend/package.json
@@ -23,17 +23,17 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.2",
-    "openai": "^6.10.0"
+    "openai": "^6.10.0",
+    "typescript": "^5.9.3",
+    "@types/express": "^5.0.6",
+    "@types/node": "^24.10.1",
+    "@types/cors": "^2.8.19"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^24.10.1",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   }
 }
